--- a/Homework02/HW2.ipynb
+++ b/Homework02/HW2.ipynb
@@ -2283,12 +2283,40 @@
     "\n",
     "**WRITE YOUR ANSWER HERE:**\n",
     "\n",
-    "1.\n",
-    "2.\n",
-    "3.\n",
-    "4.\n",
+    "1. There are few possible cases:\n",
+    "  - **Bias**. The trained model predicting the majority class more often, even for inputs belonging to the minority class.\n",
+    "  - **High Accuracy, Low Performance**. A model trained on imbalanced data may appear to have high accuracy but may perform poorly on minority classes, which are often the ones of greater interest.\n",
+    "  - **Missed Insights**. Data imbalance can result in the loss of important insights and patterns present in the minority class, leading to missed opportunities or critical errors\n",
+    "  \n",
+    "  `Source`: https://www.isi-web.org/sites/default/files/2024-02/Handling-Data-Imbalance-in-Machine-Learning.pdf\n",
+    "2. Addressing class imbalance in machine learning is crucial for developing robust models. There are several strategies to tackle this issue:\n",
     "\n",
-    "-------------------------------------------------------"
+    "  - **Data-Level Methods**:\n",
+    "    - *Oversampling*. Increase the representation of minority classes by duplicating existing samples or generating synthetic ones.\n",
+    "    - *Undersampling*. Reduce the number of majority class samples to balance the dataset.\n",
+    "    - *Combined Resampling*. Employ both oversampling and undersampling to achieve a balanced dataset.\n",
+    "  - **Algorithm-Level Techniques**:\n",
+    "    - *Model Adjustment*. Modify algorithms to be more resilient to class imbalance without altering the training data distribution.\n",
+    "    - *Ensemble Methods*. Utilize techniques like Random Forest or AdaBoost, which can handle imbalanced datasets effectively.\n",
+    "  - **Cost-Sensitive Learning**:\n",
+    "    *Assigning Costs*. Allocate higher misclassification costs to minority classes to ensure the model pays adequate attention to them.\n",
+    "  - **Anomaly Detection**: *Treating Minority Classes as Anomalies*. In cases of extreme imbalance, consider minority classes as anomalies and apply appropriate detection techniques.\n",
+    "\n",
+    "  Selecting the appropriate strategy depends on the specific problem, dataset characteristics, and desired outcomes.\n",
+    "\n",
+    "  `Source`: https://www.isi-web.org/sites/default/files/2024-02/Handling-Data-Imbalance-in-Machine-Learning.pdf\n",
+    "\n",
+    "3. The accuracy can be misleading as a performance measure because it may not reflect the model's true predictive capabilities. This phenomenon is known as **the accuracy paradox**.\n",
+    "\n",
+    "  *Example*. Consider a dataset with 90% 'ham' (non-spam) emails and 10% 'spam' emails. A model that naively classifies all emails as 'ham' would achieve 90% accuracy, as it correctly identifies all 'ham' emails. However, it fails to detect any 'spam' emails, rendering it ineffective for spam detection.\n",
+    "\n",
+    "  <u>Key Points of **accuracy paradox**</u>:\n",
+    "  - **High Accuracy, Low Predictive Power**: A high accuracy rate does not necessarily indicate a model's effectiveness, especially when it overlooks minority classes.\n",
+    "  - **Importance of Precision and Recall**: Metrics such as precision (the proportion of positive identifications that are actually correct) and recall (the proportion of actual positives that were correctly identified) provide a more nuanced evaluation of model performance in imbalanced datasets.\n",
+    "\n",
+    "  `Source`: https://digestize.medium.com/stat-digest-the-idea-behind-accuracy-paradox-e79daa9fd917\n",
+    "\n",
+    "4. CIFAR-10 is *balanced* dataset that is proven by the following pie chart:"
    ]
   },
   {
@@ -2299,7 +2327,52 @@
     "id": "bd907b86"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "# Count the number of samples for each class in the training dataset\n",
+    "train_class_counts = Counter(full_train_dataset.targets)\n",
+    "\n",
+    "# Count the number of samples for each class in the test dataset\n",
+    "test_class_counts = Counter(test_dataset.targets)\n",
+    "\n",
+    "# Class names in CIFAR-10\n",
+    "class_names = full_train_dataset.classes\n",
+    "\n",
+    "# Plot the class distribution for the training dataset\n",
+    "plt.bar(class_names, [train_class_counts[i] for i in range(len(class_names))])\n",
+    "plt.xlabel('Class Names')\n",
+    "plt.ylabel('Number of Samples')\n",
+    "plt.title('Number of Samples per Class in CIFAR-10 (Training Dataset)')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()\n",
+    "\n",
+    "sizes = [train_class_counts[i] for i in range(len(class_names))]\n",
+    "\n",
+    "# Plot the pie chart\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.pie(sizes, labels=class_names, autopct='%1.1f%%', startangle=140)\n",
+    "plt.title('Class Distribution in CIFAR-10 (Training Dataset)')\n",
+    "plt.axis('equal')\n",
+    "plt.show()\n",
+    "\n",
+    "# Print the counts\n",
+    "print(\"Training dataset class distribution:\")\n",
+    "for i, class_name in enumerate(class_names):\n",
+    "    print(f\"{class_name}: {train_class_counts[i]} samples\")\n",
+    "\n",
+    "print(\"\\nTest dataset class distribution:\")\n",
+    "for i, class_name in enumerate(class_names):\n",
+    "    print(f\"{class_name}: {test_class_counts[i]} samples\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4fff764",
+   "metadata": {},
+   "source": [
+    "-------------------------------------------------------"
+   ]
   },
   {
    "cell_type": "markdown",
