--- a/Homework02/HW2.ipynb
+++ b/Homework02/HW2.ipynb
@@ -545,8 +545,8 @@
       "source": [
         "from IPython.display import Image, display\n",
         "\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha100log.png'))\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha100.png'))"
+        "display(Image(filename='Homework02/libs/alpha100log.png'))\n",
+        "display(Image(filename='Homework02/libs/alpha100.png'))"
       ],
       "metadata": {
         "id": "KePAzsBVUGyv"
@@ -570,8 +570,8 @@
       "source": [
         "from IPython.display import Image, display\n",
         "\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha10log.png'))\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha10.png'))"
+        "display(Image(filename='Homework02/libs/alpha10log.png'))\n",
+        "display(Image(filename='Homework02/libs/alpha10.png'))"
       ],
       "metadata": {
         "id": "ErNXySpaULTp"
@@ -595,8 +595,8 @@
       "source": [
         "from IPython.display import Image, display\n",
         "\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha1log.png'))\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha1.png'))"
+        "display(Image(filename='Homework02/libs/alpha1log.png'))\n",
+        "display(Image(filename='Homework02/libs/alpha1.png'))"
       ],
       "metadata": {
         "id": "v2yJrG9vUUyW"
@@ -620,8 +620,8 @@
       "source": [
         "from IPython.display import Image, display\n",
         "\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha0.5log.png'))\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha0.5.png'))"
+        "display(Image(filename='Homework02/libs/alpha0.5log.png'))\n",
+        "display(Image(filename='Homework02/libs/alpha0.5.png'))"
       ],
       "metadata": {
         "id": "c6DphlAJUcb4"
@@ -645,8 +645,8 @@
       "source": [
         "from IPython.display import Image, display\n",
         "\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha0.001log.png'))\n",
-        "display(Image(filename='/content/drive/MyDrive/libs/images/alpha0.001.png'))"
+        "display(Image(filename='Homework02/libs/alpha0.001log.png'))\n",
+        "display(Image(filename='Homework02/libs/alpha0.001.png))"
       ],
       "metadata": {
         "id": "_E7sLdezUo9X"
